# BACKROOM-BURGUNDY

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp  tastatura.txt
.github/actions/clang-tidy/: action.yml
.github/actions/install-packages/: action.yml
.github/actions/runtime-checks/: action.yml
.github/workflows/: cmake.yml
assets/burgundy/: scene.json
docs/: architecture.md  burgundy.md  game-design.md  presentation.md  project-management.md  subagents.md
scripts/: run_cppcheck.sh
src/: main.cpp
src/app/: Framebuffer.cpp  Framebuffer.hpp  GameEngine.cpp  GameEngine.hpp  ImGuiOverlay.cpp  ImGuiOverlay.hpp  Window.cpp  Window.hpp
src/burgundy/: CombinationPuzzle.cpp  CombinationPuzzle.hpp  ExaminePuzzle.cpp  ExaminePuzzle.hpp  ExitInteractable.cpp  ExitInteractable.hpp  GameDirector.cpp  GameDirector.hpp  Interactable.cpp  Interactable.hpp  Inventory.cpp  Inventory.hpp  Item.cpp  Item.hpp  KeypadPuzzle.cpp  KeypadPuzzle.hpp  PickupInteractable.cpp  PickupInteractable.hpp  Puzzle.cpp  Puzzle.hpp  PuzzleInteractable.cpp  PuzzleInteractable.hpp  SceneLoader.cpp  SceneLoader.hpp
src/ecs/: ComponentStorage.hpp  Entity.hpp  Registry.hpp
src/errors/: Exceptions.hpp
src/game/: DoorTile.cpp  DoorTile.hpp  EmissiveWallTile.cpp  EmissiveWallTile.hpp  EmptyTile.cpp  EmptyTile.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp  PlayerRectangle.cpp  PlayerRectangle.hpp  Raycaster.cpp  Raycaster.hpp  RenderStyle.cpp  RenderStyle.hpp  Size2D.cpp  Size2D.hpp  SolidWallTile.cpp  SolidWallTile.hpp  Sprite.cpp  Sprite.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Texture.cpp  Texture.hpp  TexturedWallTile.cpp  TexturedWallTile.hpp  ThinWallTile.cpp  ThinWallTile.hpp  Tile.cpp  Tile.hpp  Vector2.cpp  Vector2.hpp
src/patterns/: TileFactory.cpp  TileFactory.hpp  WallShadingStrategy.cpp  WallShadingStrategy.hpp
src/templates/: Bounded.hpp
